<resources>
    <string name="app_name">Business cards</string>
    <string name="welcome">Welcome \nTo \nBusinessChat</string>
    <string name="not_yet_registered">Not yet registered? Register now!</string>
    <string name="join_us_today">Join us today!</string>
    <string name="already_have_account">Already have an account? Login now!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exchange_card">Exchange Cards</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="card_or_chat">Send business card or chat</string>
    <string name="chat">Chat</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="send_btn">Send</string>
    <string name="edit_btn">edit</string>
    <string name="type_message">Type a message …</string>
    <string name="username">Enter your username</string>
    <string name="firstName">Enter your first name</string>
    <string name="lastName">Enter your last name</string>
    <string name="company_name">company name: </string>
    <string name="email">email: </string>
    <string name="received_business_cards">Received business cards</string>
    <string name="see_all_users">See all users</string>
    <string name="home">Home</string>
    <string name="mobile_phone">mobile phone: </string>
    <string name="job_position">job position: </string>
    <string name="years_of_experience">years of experience: </string>
    <string name="interests">interests: </string>
    <string name="no_cards_received">No cards received</string>
    <string name="no_favorite_cards">No favorite cards</string>
    <string name="linked_in_profile">LinkedIn profile: </string>
    <string name="enterYourMobilePhone">Enter your mobile phone</string>
    <string name="enterYourCompanyName">Enter your company name</string>
    <string name="homeAddress">Enter your home address (Optional)</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="account_info">Account Info</string>
    <string name="dialog_progress_uploading">Uploading</string>
    <string name="done_btn">Done</string>
    <string name="move_next">Continue</string>
    <string name="business_chat">Business Chat</string>
    <string name="reach_every_one">Reach anyone, anywhere, anytime</string>

</resources>