<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".startup.RegisterOrLoginActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/card_view_background_orange">

                <TextView
                    style="@style/text_white_both_25sp"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/welcome" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_50"
                android:orientation="vertical">

                <TextView
                    style="@style/text_orange_14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/not_yet_registered" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    style="@style/text_white_both_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:background="@drawable/rounded_orange_button_container"
                    android:text="@string/register"
                    android:textAllCaps="false" />

                <TextView
                    style="@style/text_orange_20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:text="@string/join_us_today" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    style="@style/text_white_both_20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:background="@drawable/rounded_orange_button_container"
                    android:text="@string/login"
                    android:textAllCaps="false" />

                <TextView
                    style="@style/text_orange_14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/already_have_account" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>